# fastapi-template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  install.sh
.github/workflows/: ci.yml
src/: dependencies.py  main.py
src/routers/: user.py
src/schemas/: user.py
tests/: conftest.py
tests/routers/: test_user.py
